Fix add frontmatter button text padding on mobile

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1651,10 +1651,6 @@ body.is-mobile {
   .metadata-property-value {
     background-color: transparent;
   }
-
-  .metadata-add-button {
-    gap: 12px;
-  }
 }
 
 /********** Checkbox **********/
